UX/UI improvements upgrade & free tier, free tier revamp, unify billing & balance endpoint & schedule downgrade fix, daily refresh fix & ui

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -416,7 +416,7 @@
     "currentBadge": "Current",
     "scheduled": "Scheduled",
     "scheduledBadge": "Scheduled",
-    "loading": "Loading billing information...",
+    "loading": "Loading...",
     "subscriptionChangeScheduled": "Subscription change scheduled",
     "planWillChangeOn": "Your plan will change on {date}.",
     "failedToInitiateSubscription": "Failed to initiate subscription. Please try again.",
