--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -504,6 +504,9 @@
     "downgradePending": "Downgrade Pending",
     "downgrade": "Downgrade",
     "switchToLegacyYearly": "Switch to Legacy Yearly",
+    "confirmDowngradeTitle": "Are you sure you want to downgrade?",
+    "confirmDowngradeDescription": "You're about to downgrade to {planName}. This change will take effect at the end of your current billing period.",
+    "confirmDowngrade": "Yes, Downgrade",
     "pickPlan": "Pick the plan that works for you.",
     "reachedLimit": "You've reached your limits.",
     "projectLimit": "Project Limit ({current}/{limit})",
