--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -658,7 +658,11 @@
     "subscriptionExists": "Already Subscribed",
     "subscriptionExistsMessage": "You are already subscribed with a different account on this {platform}.",
     "subscriptionExistsHelp": "Please log into your original account to access your subscription.",
-    "gotIt": "Got it"
+    "gotIt": "Got it",
+    "scheduled": "Scheduled",
+    "scheduledBadge": "Scheduled",
+    "changeScheduled": "Change Scheduled",
+    "subscriptionChangeScheduled": "Subscription change scheduled"
   },
   "theme": {
     "title": "Appearance",
